FF scrollbar width fix

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -89,6 +89,7 @@ html {
     min-height: 60vh;
     max-height: 70vh;
     scroll-behavior: smooth;
+    scrollbar-width: none;
 }
 
 #subjects[mobile=false] {
